# tap-s3-csv

./: .gitignore  CHANGELOG.md  Pipfile  README.md  config.sample.json  ignore-pyproject.toml  metadata.sample.json  pyproject.toml  setup.py
.github/workflows/: veracode-static-scan.yml
tap_s3_csv/: __init__.py  config.py  conversion.py  csv_iterator.py  dialect.py  discover.py  messages.py  preprocess.py  s3.py  symon_exception.py  sync.py  transform.py
