[tool.poetry]
name = "tap-s3-csv"
version = "3.1.0"
description = "Singer.io tap for extracting CSV files from S3"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = ">=3.13.3,<4.0"
backoff = "2.2.1"
boto3 = "1.42.26"
singer-encodings = "0.3.0"
singer-python = "6.3.0"
voluptuous = "^0.16.0"
clevercsv = "^0.8.4"
chardet = "5.2.0"
ciso8601 = "^2.2.0"
orjson = "3.11.5"
pandas = "2.3.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tap-s3-csv = "tap_s3_csv:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
